# SymmThinningCUDA

./: CMakeLists.txt  README.md
libs/: h5_io.h
